Added creative commons to bottom of page

--- a/lesson4_assignment/author.html
+++ b/lesson4_assignment/author.html
@@ -25,19 +25,22 @@
                 </ul>
                     <p>Title: <a href="https://joshuaproject.net/" target="_blank" >Joshua Project</a></p>
                 <ul>
+                    <li>Publisher: Joshua Project</li>
                     <li>Date: 2019</li>
                 </ul>
                     <p> Title: <a href="https://www.census.gov/popclock/" target="_blank">American Census</a></p>
                 <ul>
+                    <li> Publisher: US Department of Commerce</li>
                     <li>Date: 2/28/19</li>
                 </ul>
                     <p> Title: <a href="https://www.goodreads.com/author/quotes/846687.David_Platt"target="_blank" >David Platt Quotes</a></p>
                 <ul>
-                    <li>Publication: Goodreads, Inc.</li>
+                    <li>Publisher: Goodreads, Inc.</li>
                     <li>Author: David Platt</li>
                     <li>Date: 2019</li>
                 </ul>
-                
+                          <img src="images/creative_commons.jpg" alt="Creative Commons icon"> <a href="mailto:jca15d@my.fsu.edu">Jacob Axon</a>
+<hr>
     </body>
 </html>
          
