lesson 5 second commit

--- a/lesson4_assignment/index.html
+++ b/lesson4_assignment/index.html
@@ -5,7 +5,10 @@
         <meta charset="UTF-8">
         <meta name="description" content="mission organization">
         <meta name="keywords" content="Gospel,Global,Missionary,Bible,God">
-        <meta name="author" content="Jacob Axon"
+        <meta name="author" content="Jacob Axon">
+        <link rel="stylesheet" href="lesson5_assignment/style.css">
+        
+
     </head>
         <body>
             <img src="images/gg.jpg" width="1200" height="400" alt="A cross overlooking a mountain range.">
