--- a/lesson5_assignment/media.html
+++ b/lesson5_assignment/media.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html> 
-    <head> <!-- Jacob Axon 2/27/19 -->
+    <head> <!-- Jacob Axon 3/24/19 -->
        <title> Gospel Global   </title> 
         <meta charset="UTF-8">
         <meta name="description" content="mission organization">
         <meta name="keywords" content="Gospel,Global,Missionary,Bible,God">
-        <meta name="author" content="Jacob Axon"
+        <meta name="author" content="Jacob Axon">
+        <link rel="stylesheet" href="style.css">
     </head>
         <body>
             <img src="images/gg.jpg" width="1200" height="400" alt="A cross overlooking a mountain range.">
