lesson 5 final commit

--- a/lesson5_assignment/author.html
+++ b/lesson5_assignment/author.html
@@ -40,6 +40,15 @@
                     <li>Author: David Platt</li>
                     <li>Date: 2019</li>
                 </ul>
+                <hr>
+                <table> width="200">
+                <tr>
+                    <td bgcolor="#1A1F5A">&nbsp;</td>
+                    <td bgcolor="#3A631E">&nbsp;</td>
+                    <td bgcolor="#FFFFFF">&nbsp;</td>
+                </tr>
+                </table>
+                <p> This is a color pallette selected to highlight the natural colors in the banner cover photo. The blue and green really bring out the color of the trees and skyline in the banner cover photo, while the white text comfortably stands out and is very easy to read.</p>
                           <img src="images/creative_commons.jpg" alt="Creative Commons icon"> <a href="mailto:jca15d@my.fsu.edu">Jacob Axon</a>
 <hr>
     </body>
